# Business-model-KG

./: .env.example  .gitignore  FINE_TUNING_STUDY_NOTES.md  README.md  TECH_DEBT.md  docker-compose.yml  hand_matching_review_example.csv  pyproject.toml  requirements-mlx-lora.txt  requirements.txt
.github/workflows/: checks.yml
configs/: ontology.json  ontology_v2.json  ontology_v2_segment_serves.json
data/: adobe_10k.txt  amazon_10k.txt  apple_10k.txt  berkshire_10k.txt  dummy_test_10k.txt  google_10k.txt  manual.txt  microsoft_10k.txt  microsoft_eval_gold.json  opus_microsoft.json  palantir_10k.txt  walmart_10k.txt
datasets/text2cypher/: README.md
docs/: evaluation.md  evaluation_contract.md  final_project_completion_plan.md  ontology.md  ontology_v2.md  plan.md  project_map.md  project_walkthrough.md  repo_structure.md  reproducibility.md  runtime_guide.md  text2cypher_bound_seed_validation_report.json  text2cypher_coverage_grid.md  text2cypher_dataset_plan.md  text2cypher_dataset_readiness_v1.md  text2cypher_synthetic_fixture_instances_v0.jsonl  text2cypher_synthetic_fixture_instances_v1.jsonl  text2cypher_synthetic_fixture_library_v0.md  text2cypher_training_examples_v1.jsonl  text2cypher_training_examples_v1_dev.jsonl  text2cypher_training_examples_v1_train.jsonl  text2cypher_training_split_manifest_v1.json
docs/text2cypher/: README.md  fine_tuning_mlx.md
evaluation/: README.md  __init__.py
evaluation/aliases/: approved_aliases.example.json
evaluation/gold_reference/: Adobe_annotations_10k_Luca.xlsx  Amazon_annotations_10k_Luca.xlsx  Berkshire_Annotations_10k_Luca.xlsx  Official_Walmart_10k.xlsx
evaluation/inter_annotator_amazon/: 10K_Annotation_Sheet_AMAZON.xlsx  Amazon-zhong.csv
evaluation/intra_annotator/: intra_annotator_standard_adobe_berkshire_walmart4.csv
evaluation/scripts/: __init__.py  apply_hand_matches.py  evaluate.py  prepare_gold.py
finetuning/: README.md  pyproject.toml
finetuning/config/: continue_from_2500_epoch2.json  default.json  resume_old_strategy.json  retrain_from_zero.json
finetuning/scripts/: bootstrap_env.sh  download_query_planner_data.sh
finetuning/src/kg_query_planner_ft/: __init__.py  cli_output.py  config.py  constants.py  frozen_prompt.py  json_utils.py  local_router.py  local_stack.py  offline_contract.py  paths.py  planner_eval.py  planner_train.py  planner_worker.py  prepare_data.py  progress.py  publish_query_stack.py  router_eval.py  router_metrics.py  router_train.py  runtime_compat.py
finetuning/tests/: test_cli_output.py  test_local_stack.py  test_paths.py  test_planner_eval.py  test_planner_train.py  test_planner_worker.py  test_prepare_data.py  test_publish_query_stack.py  test_router_eval.py
prompts/: README.md
prompts/analyst/: README.md  graph_compilation.txt  graph_critique.txt  graph_system.txt  memo_augmentation.txt  memo_foundation.txt  system.txt
prompts/canonical/: final_reflection_user.txt  pass2_channels.txt  pass3_serves.txt  pass4_corporate.txt  rule_reflection_system.txt  rule_reflection_user.txt
prompts/memo_graph_only/: README.md  memo_foundation.txt  system.txt
prompts/zero-shot/: extract.txt
runtime_assets/: README.md
scripts/: _bootstrap.py  _run_repo_module.sh  augment_finreflectkg_stage3.py  bootstrap_dev.sh  build_text2cypher_dataset.py  build_text2cypher_dataset_v3.py  check_repo.sh  clean_local_artifacts.sh  evaluate_stage3_smoke.py  evaluate_text2cypher_mlx_adapter.py  export_hf_text2cypher_dataset.py  export_hf_text2cypher_dataset_v3.py  filter_operates_in.py  kg-evaluate-graph  kg-health-check  kg-neo4j-load  kg-neo4j-status  kg-neo4j-unload  kg-pipeline  kg-query  kg-query-cypher  kg-query-cypher-jolly  kg-query-dataset  kg-query-jolly  load_custom_graph.py  load_manual_graph.py  prepare_text2cypher_mlx_dataset.py  project_finreflectkg_stage1.py  repair_batch_segment_relations.py  run_batch.py  sample_empty_chunks.py  sync_bundled_prompts.py  train_text2cypher_mlx_lora.py
scripts/text2cypher/: _bootstrap.py  build_text2cypher_dataset.py  evaluate_text2cypher_mlx_adapter.py  export_hf_text2cypher_dataset.py  prepare_text2cypher_mlx_dataset.py  train_text2cypher_mlx_lora.py
src/: batch_repair.py  chunk_quality.py  chunker.py  entity_resolver.py  evaluate_graph.py  finreflectkg_projection.py  finreflectkg_stage3.py  llm_extractor.py  load_custom_graph.py  load_manual_graph.py  main.py  model_provider.py  neo4j_loader.py  ontology_config.py  ontology_validator.py  operates_in_cleanup.py  place_hierarchy.py  query_cypher.py  stage3_prompt_profiles.py  stage3_smoke_cases.py  text2cypher_mlx_lora.py  validate_text2cypher_dataset.py
src/graph/: evaluate_graph.py  neo4j_loader.py
src/llm/: __init__.py  extractor.py
src/llm_extraction/: __init__.py  audit.py  models.py  prompting.py
src/ontology/: __init__.py  (+4 more)
tests/: test_batch_repair.py  test_dataset_pipeline_safety.py  test_export_hf_text2cypher_dataset.py  test_finreflectkg_projection.py  test_ontology_validator.py  test_operates_in_cleanup.py  test_pipeline_components.py  test_place_hierarchy.py  test_stage2_empty_sampling.py  test_stage3_augmentation.py  test_stage3_smoke_cases.py  test_stage3_smoke_eval.py  test_text2cypher_dataset_builder.py  test_text2cypher_mlx_lora.py  test_validate_text2cypher_dataset.py
(+675 files in other folders)
